# snake-game

./: .flake8  README.md  pyproject.toml
src/: Element.py  Window.py  element.py  main.py  settings.py  window.py
static/font/: poxel-license.txt
